# Mesh-Voice

./: Cargo.toml  HANDOFF-PROMPT.md  README.md  theme.example.toml
crates/mesh-app/: Cargo.toml
crates/mesh-app/src/: main.rs  rain.rs  theme.rs
crates/mesh-core/: Cargo.toml
crates/mesh-core/src/: audio.rs  call.rs  lib.rs  session.rs  verification.rs
